--- a/index.html
+++ b/index.html
@@ -57,210 +57,186 @@
         </div>
       </section>
       <section class="benefits">
-        <div class="container container--small">
-          <h1 class="title">Benefits of using Orderstep in your business</h1>
-          <p class="description">
-            Even though we see Orderstep work in all industries, we understand
-            that each industry has its own special way. Below we have listed the
-            pains and gains that we have identified for our users and remedied
-            with the use of Orderstep.
-          </p>
-
-          <div class="benefits-btns">
-            <button class="btn">Hotels & Events</button>
-            <button class="btn btn--blue">Service</button>
-            <button class="btn">B2B sales</button>
-            <button class="btn">Others</button>
-          </div>
-        </div>
         <div class="container">
           <div class="benefits-row">
-            <h2 class="benefits-title">The Pains we had</h2>
-            <h2 class="benefits-title">The Gains we got</h2>
-          </div>
-          <div class="benefits-row">
-            <p class="text benefits-description">
-              In the service industry you know how important it is to have happy
-              customers. And they will reward you with more business if they are
-              happy. You might recognize some of the pains below, if so we are
-              ready to help.
-            </p>
-            <p class="text benefits-description">
-              We ask for 14 days were you get used to the new process of using
-              Orderstep, and then we guarantee these results. It does not take
-              longer. And then you will be running a more smooth business and
-              have much more control with your sales.
-            </p>
-          </div>
-          <div class="benefits-list">
-            <div class="list-item">
-              <div class="list-pains">
-                <img
-                  src="./img/benefits/exclamation-point.svg"
-                  alt="exclamation-point"
-                  class="list-icon"
-                />
-                <p class="text">
-                  Forgetting to send or sending wrong monthly invoices.
-                </p>
-              </div>
-              <div class="list-gains">
-                <img
-                  src="./img/checkbox.svg"
-                  alt="checkbox"
-                  class="list-icon"
-                />
-                <p class="text">Automatically invoices the agreed amount</p>
-              </div>
-            </div>
-            <div class="list-item">
-              <div class="list-pains">
-                <img
-                  src="./img/benefits/exclamation-point.svg"
-                  alt="exclamation-point"
-                  class="list-icon"
-                />
-                <p class="text">
-                  Forgetting or never following up with customers
-                </p>
-              </div>
-              <div class="list-gains">
-                <img
-                  src="./img/checkbox.svg"
-                  alt="checkbox"
-                  class="list-icon"
-                />
-                <p class="text">
-                  Being perceived as pro-active with the reminders in Orderstep
-                </p>
-              </div>
-            </div>
-            <div class="list-item">
-              <div class="list-pains">
-                <img
-                  src="./img/benefits/exclamation-point.svg"
-                  alt="exclamation-point"
-                  class="list-icon"
-                />
-                <p class="text">
-                  Manual work of creating a word template and converting to PDF
-                  and sending it.
-                </p>
-              </div>
-              <div class="list-gains">
-                <img
-                  src="./img/checkbox.svg"
-                  alt="checkbox"
-                  class="list-icon"
-                />
-                <p class="text">Automatic PDF created with company branding</p>
-              </div>
-            </div>
-            <div class="list-item">
-              <div class="list-pains">
-                <img
-                  src="./img/benefits/exclamation-point.svg"
-                  alt="exclamation-point"
-                  class="list-icon"
-                />
-                <p class="text">Forgetting to follow-up on sales</p>
-              </div>
-              <div class="list-gains">
-                <img
-                  src="./img/checkbox.svg"
-                  alt="checkbox"
-                  class="list-icon"
-                />
-                <p class="text">
-                  Automatic follow-ups and easy overview of all sales that is
-                  not closed yet
-                </p>
+            <div class="benefits-pains">
+              <h2 class="benefits-title">The Pains we had</h2>
+              <p class="text benefits-description">
+                In the service industry you know how important it is to have
+                happy customers. And they will reward you with more business if
+                they are happy. You might recognize some of the pains below, if
+                so we are ready to help.
+              </p>
+              <div class="benefits-list">
+                <div class="list-item">
+                  <img
+                    src="./img/benefits/exclamation-point.svg"
+                    alt="exclamation-point"
+                    class="list-icon"
+                  />
+                  <p class="text">
+                    Forgetting to send or sending wrong monthly invoices.
+                  </p>
+                </div>
+
+                <div class="list-item">
+                  <img
+                    src="./img/benefits/exclamation-point.svg"
+                    alt="exclamation-point"
+                    class="list-icon"
+                  />
+                  <p class="text">
+                    Forgetting or never following up with customers
+                  </p>
+                </div>
+                <div class="list-item">
+                  <img
+                    src="./img/benefits/exclamation-point.svg"
+                    alt="exclamation-point"
+                    class="list-icon"
+                  />
+                  <p class="text">
+                    Manual work of creating a word template and converting to
+                    PDF and sending it.
+                  </p>
+                </div>
+                <div class="list-item">
+                  <img
+                    src="./img/benefits/exclamation-point.svg"
+                    alt="exclamation-point"
+                    class="list-icon"
+                  />
+                  <p class="text">Forgetting to follow-up on sales</p>
+                </div>
+                <div class="list-item">
+                  <img
+                    src="./img/benefits/exclamation-point.svg"
+                    alt="exclamation-point"
+                    class="list-icon"
+                  />
+                  <p class="text">
+                    Yellow notes everywhere, tasks and things in the heads of
+                    people.
+                  </p>
+                </div>
+                <div class="list-item">
+                  <img
+                    src="./img/benefits/exclamation-point.svg"
+                    alt="exclamation-point"
+                    class="list-icon"
+                  />
+                  <p class="text">Manual approvals in mails that disappears</p>
+                </div>
+                <div class="list-item">
+                  <img
+                    src="./img/benefits/exclamation-point.svg"
+                    alt="exclamation-point"
+                    class="list-icon"
+                  />
+                  <p class="text">
+                    Not knowing if a customer got your quote or invoice
+                  </p>
+                </div>
+                <div class="list-item">
+                  <img
+                    src="./img/benefits/exclamation-point.svg"
+                    alt="exclamation-point"
+                    class="list-icon"
+                  />
+                  <p class="text">Not knowing how many quotes is converted</p>
+                </div>
               </div>
             </div>
-            <div class="list-item">
-              <div class="list-pains">
-                <img
-                  src="./img/benefits/exclamation-point.svg"
-                  alt="exclamation-point"
-                  class="list-icon"
-                />
-                <p class="text">
-                  Yellow notes everywhere, tasks and things in the heads of
-                  people.
-                </p>
-              </div>
-              <div class="list-gains">
-                <img
-                  src="./img/checkbox.svg"
-                  alt="checkbox"
-                  class="list-icon"
-                />
-                <p class="text">
-                  All TODO's in a single easy managable overview.
-                </p>
-              </div>
-            </div>
-            <div class="list-item">
-              <div class="list-pains">
-                <img
-                  src="./img/benefits/exclamation-point.svg"
-                  alt="exclamation-point"
-                  class="list-icon"
-                />
-                <p class="text">Manual approvals in mails that disappears</p>
-              </div>
-              <div class="list-gains">
-                <img
-                  src="./img/checkbox.svg"
-                  alt="checkbox"
-                  class="list-icon"
-                />
-                <p class="text">
-                  Approvals happens on the portal and is stored in the system.
-                </p>
-              </div>
-            </div>
-            <div class="list-item">
-              <div class="list-pains">
-                <img
-                  src="./img/benefits/exclamation-point.svg"
-                  alt="exclamation-point"
-                  class="list-icon"
-                />
-                <p class="text">
-                  Not knowing if a customer got your quote or invoice
-                </p>
-              </div>
-              <div class="list-gains">
-                <img
-                  src="./img/checkbox.svg"
-                  alt="checkbox"
-                  class="list-icon"
-                />
-                <p class="text">
-                  Orderstep tracks if customers opens mails and PDF's.
-                </p>
-              </div>
-            </div>
-            <div class="list-item">
-              <div class="list-pains">
-                <img
-                  src="./img/benefits/exclamation-point.svg"
-                  alt="exclamation-point"
-                  class="list-icon"
-                />
-                <p class="text">Not knowing how many quotes is converted</p>
-              </div>
-              <div class="list-gains">
-                <img
-                  src="./img/checkbox.svg"
-                  alt="checkbox"
-                  class="list-icon"
-                />
-                <p class="text">
-                  Keep track of all quotes, the conversion and also why they did
-                  not convert
-                </p>
+            <div class="benefits-gains">
+              <h2 class="benefits-title">The Gains we got</h2>
+              <p class="text benefits-description">
+                We ask for 14 days were you get used to the new process of using
+                Orderstep, and then we guarantee these results. It does not take
+                longer. And then you will be running a more smooth business and
+                have much more control with your sales.
+              </p>
+              <div class="benefits-list">
+                <div class="list-item">
+                  <img
+                    src="./img/checkbox.svg"
+                    alt="checkbox"
+                    class="list-icon"
+                  />
+                  <p class="text">Automatically invoices the agreed amount</p>
+                </div>
+                <div class="list-item">
+                  <img
+                    src="./img/checkbox.svg"
+                    alt="checkbox"
+                    class="list-icon"
+                  />
+                  <p class="text">
+                    Being perceived as pro-active with the reminders in
+                    Orderstep
+                  </p>
+                </div>
+                <div class="list-item">
+                  <img
+                    src="./img/checkbox.svg"
+                    alt="checkbox"
+                    class="list-icon"
+                  />
+                  <p class="text">
+                    Automatic PDF created with company branding
+                  </p>
+                </div>
+                <div class="list-item">
+                  <img
+                    src="./img/checkbox.svg"
+                    alt="checkbox"
+                    class="list-icon"
+                  />
+                  <p class="text">
+                    Automatic follow-ups and easy overview of all sales that is
+                    not closed yet
+                  </p>
+                </div>
+                <div class="list-item">
+                  <img
+                    src="./img/checkbox.svg"
+                    alt="checkbox"
+                    class="list-icon"
+                  />
+                  <p class="text">
+                    All TODO's in a single easy managable overview.
+                  </p>
+                </div>
+                <div class="list-item">
+                  <img
+                    src="./img/checkbox.svg"
+                    alt="checkbox"
+                    class="list-icon"
+                  />
+                  <p class="text">
+                    Approvals happens on the portal and is stored in the system.
+                  </p>
+                </div>
+                <div class="list-item">
+                  <img
+                    src="./img/checkbox.svg"
+                    alt="checkbox"
+                    class="list-icon"
+                  />
+                  <p class="text">
+                    Orderstep tracks if customers opens mails and PDF's.
+                  </p>
+                </div>
+                <div class="list-item">
+                  <img
+                    src="./img/checkbox.svg"
+                    alt="checkbox"
+                    class="list-icon"
+                  />
+                  <p class="text">
+                    Keep track of all quotes, the conversion and also why they
+                    did not convert
+                  </p>
+                </div>
               </div>
             </div>
           </div>
