--- a/index.html
+++ b/index.html
@@ -57,6 +57,22 @@
         </div>
       </section>
       <section class="benefits">
+        <div class="container container--small">
+          <h1 class="title">Benefits of using Orderstep in your business</h1>
+          <p class="description">
+            Even though we see Orderstep work in all industries, we understand
+            that each industry has its own special way. Below we have listed the
+            pains and gains that we have identified for our users and remedied
+            with the use of Orderstep.
+          </p>
+
+          <div class="benefits-btns">
+            <button class="btn">Hotels & Events</button>
+            <button class="btn btn--blue">Service</button>
+            <button class="btn">B2B sales</button>
+            <button class="btn">Others</button>
+          </div>
+        </div>
         <div class="container">
           <div class="benefits-row">
             <div class="benefits-pains">
