--- a/index.html
+++ b/index.html
@@ -75,8 +75,10 @@
         </div>
         <div class="container">
           <div class="benefits-row">
-            <div class="benefits-pains">
-              <h2 class="benefits-title">The Pains we had</h2>
+            <div class="benefits-item">
+              <h2 class="benefits-title">The Pains we had
+                <img src="./img/benefits/arrow-down.svg" alt="arrow down" class="benefits-icon">
+              </h2>
               <p class="text benefits-description">
                 In the service industry you know how important it is to have
                 happy customers. And they will reward you with more business if
@@ -163,8 +165,11 @@
                 </div>
               </div>
             </div>
-            <div class="benefits-gains">
-              <h2 class="benefits-title">The Gains we got</h2>
+            <div class="benefits-item">
+              <h2 class="benefits-title">
+                The Gains we got
+                <img src="./img/benefits/arrow-down.svg" alt="arrow down" class="benefits-icon">
+              </h2>
               <p class="text benefits-description">
                 We ask for 14 days were you get used to the new process of using
                 Orderstep, and then we guarantee these results. It does not take
@@ -682,6 +687,9 @@
           </div>
           <div class="ready-info">
             <h1 class="title">Ready to step up your sales game?</h1>
+            <div class="ready-image ready-image--mobile">
+              <img src="./img/ready/man.png" alt="man">
+            </div>
             <div class="ready-row">
               <img src="./img/ready/in.svg" alt="in" class="ready-in">
               <p class="ready-text">
