--- a/index.html
+++ b/index.html
@@ -943,19 +943,35 @@
               </div>
               <div class="service-btns">
                 <button class="btn btn--service">
-                  <img
-                    src="./img/service/arrow-right-white.svg"
-                    alt="arrow right"
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="7"
+                    height="11"
+                    viewBox="0 0 7 11"
+                    fill="none"
                     class="btn-icon"
-                  />
+                  >
+                    <path
+                      d="M6.37353 5.88862L1.9231 10.339C1.70846 10.5537 1.36048 10.5537 1.14586 10.339L0.626794 9.81995C0.412522 9.60568 0.412109 9.25841 0.625878 9.04363L4.15292 5.49999L0.625878 1.95637C0.412109 1.74159 0.412522 1.39432 0.626794 1.18005L1.14586 0.660979C1.3605 0.44634 1.70849 0.44634 1.9231 0.660979L6.3735 5.11138C6.58814 5.326 6.58814 5.67398 6.37353 5.88862Z"
+                      fill="#000"
+                    />
+                  </svg>
                   Try for free
                 </button>
                 <button class="btn btn--service btn--border">
-                  <img
-                    src="./img/service/arrow-right-green.svg"
-                    alt="arrow right"
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="7"
+                    height="11"
+                    viewBox="0 0 7 11"
+                    fill="none"
                     class="btn-icon"
-                  />
+                  >
+                    <path
+                      d="M6.37353 5.88862L1.9231 10.339C1.70846 10.5537 1.36048 10.5537 1.14586 10.339L0.626794 9.81995C0.412522 9.60568 0.412109 9.25841 0.625878 9.04363L4.15292 5.49999L0.625878 1.95637C0.412109 1.74159 0.412522 1.39432 0.626794 1.18005L1.14586 0.660979C1.3605 0.44634 1.70849 0.44634 1.9231 0.660979L6.3735 5.11138C6.58814 5.326 6.58814 5.67398 6.37353 5.88862Z"
+                      fill="#000"
+                    />
+                  </svg>
                   Learn more
                 </button>
               </div>
@@ -1013,19 +1029,35 @@
               </div>
               <div class="service-btns">
                 <button class="btn btn--service">
-                  <img
-                    src="./img/service/arrow-right-white.svg"
-                    alt="arrow right"
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="7"
+                    height="11"
+                    viewBox="0 0 7 11"
+                    fill="none"
                     class="btn-icon"
-                  />
+                  >
+                    <path
+                      d="M6.37353 5.88862L1.9231 10.339C1.70846 10.5537 1.36048 10.5537 1.14586 10.339L0.626794 9.81995C0.412522 9.60568 0.412109 9.25841 0.625878 9.04363L4.15292 5.49999L0.625878 1.95637C0.412109 1.74159 0.412522 1.39432 0.626794 1.18005L1.14586 0.660979C1.3605 0.44634 1.70849 0.44634 1.9231 0.660979L6.3735 5.11138C6.58814 5.326 6.58814 5.67398 6.37353 5.88862Z"
+                      fill="#000"
+                    />
+                  </svg>
                   Try for free
                 </button>
                 <button class="btn btn--service btn--border">
-                  <img
-                    src="./img/service/arrow-right-green.svg"
-                    alt="arrow right"
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="7"
+                    height="11"
+                    viewBox="0 0 7 11"
+                    fill="none"
                     class="btn-icon"
-                  />
+                  >
+                    <path
+                      d="M6.37353 5.88862L1.9231 10.339C1.70846 10.5537 1.36048 10.5537 1.14586 10.339L0.626794 9.81995C0.412522 9.60568 0.412109 9.25841 0.625878 9.04363L4.15292 5.49999L0.625878 1.95637C0.412109 1.74159 0.412522 1.39432 0.626794 1.18005L1.14586 0.660979C1.3605 0.44634 1.70849 0.44634 1.9231 0.660979L6.3735 5.11138C6.58814 5.326 6.58814 5.67398 6.37353 5.88862Z"
+                      fill="#000"
+                    />
+                  </svg>
                   Learn more
                 </button>
               </div>
@@ -1074,19 +1106,35 @@
               </div>
               <div class="service-btns">
                 <button class="btn btn--service">
-                  <img
-                    src="./img/service/arrow-right-white.svg"
-                    alt="arrow right"
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="7"
+                    height="11"
+                    viewBox="0 0 7 11"
+                    fill="none"
                     class="btn-icon"
-                  />
+                  >
+                    <path
+                      d="M6.37353 5.88862L1.9231 10.339C1.70846 10.5537 1.36048 10.5537 1.14586 10.339L0.626794 9.81995C0.412522 9.60568 0.412109 9.25841 0.625878 9.04363L4.15292 5.49999L0.625878 1.95637C0.412109 1.74159 0.412522 1.39432 0.626794 1.18005L1.14586 0.660979C1.3605 0.44634 1.70849 0.44634 1.9231 0.660979L6.3735 5.11138C6.58814 5.326 6.58814 5.67398 6.37353 5.88862Z"
+                      fill="#000"
+                    />
+                  </svg>
                   Try for free
                 </button>
                 <button class="btn btn--service btn--border">
-                  <img
-                    src="./img/service/arrow-right-green.svg"
-                    alt="arrow right"
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="7"
+                    height="11"
+                    viewBox="0 0 7 11"
+                    fill="none"
                     class="btn-icon"
-                  />
+                  >
+                    <path
+                      d="M6.37353 5.88862L1.9231 10.339C1.70846 10.5537 1.36048 10.5537 1.14586 10.339L0.626794 9.81995C0.412522 9.60568 0.412109 9.25841 0.625878 9.04363L4.15292 5.49999L0.625878 1.95637C0.412109 1.74159 0.412522 1.39432 0.626794 1.18005L1.14586 0.660979C1.3605 0.44634 1.70849 0.44634 1.9231 0.660979L6.3735 5.11138C6.58814 5.326 6.58814 5.67398 6.37353 5.88862Z"
+                      fill="#000"
+                    />
+                  </svg>
                   Learn more
                 </button>
               </div>
@@ -1104,11 +1152,19 @@
                 always free subscription, which will help you with your company.
               </p>
               <button class="btn btn--service btn--border">
-                <img
-                  src="./img/service/arrow-right-green.svg"
-                  alt="arrow right"
-                  class="btn-icon"
-                />
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="7"
+                    height="11"
+                    viewBox="0 0 7 11"
+                    fill="none"
+                    class="btn-icon"
+                  >
+                    <path
+                      d="M6.37353 5.88862L1.9231 10.339C1.70846 10.5537 1.36048 10.5537 1.14586 10.339L0.626794 9.81995C0.412522 9.60568 0.412109 9.25841 0.625878 9.04363L4.15292 5.49999L0.625878 1.95637C0.412109 1.74159 0.412522 1.39432 0.626794 1.18005L1.14586 0.660979C1.3605 0.44634 1.70849 0.44634 1.9231 0.660979L6.3735 5.11138C6.58814 5.326 6.58814 5.67398 6.37353 5.88862Z"
+                      fill="#000"
+                    />
+                  </svg>
                 view Prices and Packages
               </button>
             </div>
@@ -1497,19 +1553,35 @@
             </p>
             <div class="ready-btns">
               <button class="btn btn--service">
-                <img
-                  src="./img/service/arrow-right-white.svg"
-                  alt="arrow right"
-                  class="btn-icon"
-                />
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="7"
+                    height="11"
+                    viewBox="0 0 7 11"
+                    fill="none"
+                    class="btn-icon"
+                  >
+                    <path
+                      d="M6.37353 5.88862L1.9231 10.339C1.70846 10.5537 1.36048 10.5537 1.14586 10.339L0.626794 9.81995C0.412522 9.60568 0.412109 9.25841 0.625878 9.04363L4.15292 5.49999L0.625878 1.95637C0.412109 1.74159 0.412522 1.39432 0.626794 1.18005L1.14586 0.660979C1.3605 0.44634 1.70849 0.44634 1.9231 0.660979L6.3735 5.11138C6.58814 5.326 6.58814 5.67398 6.37353 5.88862Z"
+                      fill="#000"
+                    />
+                  </svg>
                 Try for free
               </button>
               <button class="btn btn--service btn--border">
-                <img
-                  src="./img/service/arrow-right-green.svg"
-                  alt="arrow right"
-                  class="btn-icon"
-                />
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="7"
+                    height="11"
+                    viewBox="0 0 7 11"
+                    fill="none"
+                    class="btn-icon"
+                  >
+                    <path
+                      d="M6.37353 5.88862L1.9231 10.339C1.70846 10.5537 1.36048 10.5537 1.14586 10.339L0.626794 9.81995C0.412522 9.60568 0.412109 9.25841 0.625878 9.04363L4.15292 5.49999L0.625878 1.95637C0.412109 1.74159 0.412522 1.39432 0.626794 1.18005L1.14586 0.660979C1.3605 0.44634 1.70849 0.44634 1.9231 0.660979L6.3735 5.11138C6.58814 5.326 6.58814 5.67398 6.37353 5.88862Z"
+                      fill="#000"
+                    />
+                  </svg>
                 Get a demo
               </button>
             </div>
